@@ -44,7 +44,6 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ExecutionException;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -94,7 +93,7 @@ class StreamAtChangeTest extends DefaultEnvironment {
 		List<Integer> collect = streamLog.values().stream()
 				.flatMap(Collection::stream)
 				.map(IStreamlog::getChange)
-				.sorted().collect(Collectors.toList());
+				.sorted().toList();
 		int firstVersion = collect.get(0);
 		int secondVersion = collect.get(1);
 
@@ -122,7 +121,7 @@ class StreamAtChangeTest extends DefaultEnvironment {
 		List<Integer> collect = streamLog.values().stream()
 				.flatMap(Collection::stream)
 				.map(IStreamlog::getChange)
-				.sorted().collect(Collectors.toList());
+				.sorted().toList();
 		int secondVersion = collect.get(1);
 
 		String stream = "//stream/atChange";
@@ -174,7 +173,7 @@ class StreamAtChangeTest extends DefaultEnvironment {
 		List<Integer> collect = streamLog.values().stream()
 				.flatMap(Collection::stream)
 				.map(IStreamlog::getChange)
-				.sorted().collect(Collectors.toList());
+				.sorted().toList();
 		int secondVersion = collect.get(1);
 
 		String pipeline = ""
